# ZarrDF

./: .gitignore  Cargo.toml  README.md
benches/: perf.rs  triples.rs
examples/: by_object.rs  by_predicate.rs  by_subject.rs  serialization.rs  triples.rs  triples_matching.rs
src/: config.rs  dictionary.rs  error.rs  index.rs  lib.rs  query.rs  rdf_format.rs  storage.rs  utils.rs
tests/: triples.rs  triples_matching.rs
