[package]
name = "zarrdf"
version = "0.1.0"
edition = "2021"

[dependencies]
oxrdf = { version = "0.2.3" }
oxrdfio = { version = "0.1.3" }
thiserror = "2.0.6"
zarrs = "0.18.0"
itertools = "0.13.0"
fcsd = "0.2.0"
serde_json = "1.0.133"
anyhow = "1.0.94"

[dev-dependencies]
pprof = { version = "0.14.0", features = ["flamegraph"] }
criterion = "0.5.1"
criterion-macro = "0.4.0"
